--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
             })
             .then(response => {
                 if (response.ok) {
-                    alert('Login data submitted successfully!');
+                    alert(' you have Login successfully!');
                 } else {
                     alert('Failed to submit login data. Please try again.');
                 }
